# MusiCodeStudio

./: .gitignore  .gitmodules  .vscodeignore  DESIGN.md  FILE_STRUCTURE.md  GEMINI.md
docs/: TE_Cookbook.html
engine/MusiCodeEngine/: CMakeLists.txt  Main.cpp
engine/MusiCodeEngine/Microsoft.Web.WebView2/: Microsoft.Web.WebView2.nuspec
engine/MusiCodeEngine/Microsoft.Web.WebView2/_rels/: .rels
engine/MusiCodeEngine/Source/: AudioEngine.cpp  AudioEngine.h  CommandRouter.cpp  CommandRouter.h  HttpServer.cpp  HttpServer.h  MainWindow.cpp  MainWindow.h  MidiController.cpp  MidiController.h  ParameterDispatcher.h  PluginController.cpp  PluginController.h  RecordingController.cpp  RecordingController.h  TrackManager.h  TransportController.cpp  TransportController.h  WebController.h
log/: details.md  handover.md  todo.md
log/mappings/: AudioEngine_FunctionsTable.html  Engine_Modules_Mapping.html  Framework_API_Index.html  MidiController.html  ParameterDispatcher.html  Protocol_Mapping.html  TrackManager.html  UI_FunctionsTable.html  UI_Modules_Mapping.html
log/work/: 2026-05-01.md  2026-05-02.md  2026-05-03.html  2026-05-10.md  2026-05-16.md  2026-05-17.html  2026-05-20.html  2026-05-23.html  2026-05-24.html
tests/: MidiTo4OscTest.cpp  RecordingModuleTest.cpp
tests/MidiTo4OscTestApp/: CMakeLists.txt  Main.cpp
tests/RecordingModuleTestApp/: CMakeLists.txt  Main.cpp
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css
ui/src/components/: PluginRack.tsx  Toolbar.tsx  TrackHeader.tsx  TrackList.tsx
ui/src/services/: EngineService.ts
ui/src/views/: ArrangementView.tsx  BlocklyView.tsx  PianoRollView.tsx  StaffView.tsx
